--- a/products/product.css
+++ b/products/product.css
@@ -10,3 +10,66 @@ main {
 .product {
     display: flex;
 }
+
+.info {
+    padding: 10px 15px;
+    max-width: 50%;
+}
+.info h1 {
+    font-size: 27.2px;
+    color: #555;
+    margin-bottom: 14px;
+}
+.divider {
+    background-color: rgba(0, 0, 0, 0.1);
+    height: 3px;
+    max-width: 30px;
+}
+.info h2 {
+    margin: 12px 0;
+}
+.info p {
+    color: #777;
+    margin-bottom: 21px;
+}
+
+.cart form{
+    display: flex;
+    margin-bottom: 21px;
+}
+
+.quantity {
+    display: flex;
+    margin-right: 16px;
+}
+.quantity input {
+    outline: none;
+    border: 1px #ddd solid;
+    text-align: center;
+}
+.quantity input[type="button"] {
+    width: 25px;
+    background-color: #f9f9f9;
+    transition: 0.3s;
+}
+.quantity input[type="button"]:hover {
+    box-shadow: inset 0 0 0 100px rgb(0 0 0 / 20%);
+}
+.quantity input[type="number"] {
+    box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.05) inset;
+    width: 40px;
+}
+.quantity input[type="number"]::-webkit-inner-spin-button {
+    display: none;
+}
+
+.cart .btn {
+    border: none;
+    line-height: 40px;
+    background-color: #007784;
+    padding: 0 19.2px;
+    text-transform: uppercase;
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+}
