--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -5,7 +7,7 @@
     font-family: sans-serif;
     list-style: none;
     text-decoration: none;
-
+    font-family: 'Roboto', sans-serif;
 }
 
 html {
