--- a/asset/stylesheet/home.css
+++ b/asset/stylesheet/home.css
@@ -90,7 +90,10 @@
     display: inline-block;
     position: relative;
 }
-
+.row-item-blur img {
+    opacity: 0.7;
+    transition: all ease 0.3;
+}
 
 .row-item.category div {
     position: absolute;
