--- a/asset/stylesheet/product.css
+++ b/asset/stylesheet/product.css
@@ -44,12 +44,12 @@ main {
     margin: 0;
 }
 
-.info {
+.product .info {
     padding: 10px 15px;
     max-width: 50%;
 }
 
-.info h1 {
+.product .info h1 {
     font-size: 27.2px;
     color: #555;
     margin-bottom: 14px;
@@ -61,11 +61,11 @@ main {
     max-width: 30px;
 }
 
-.info h2 {
+.product .info h2 {
     margin: 12px 0;
 }
 
-.info p {
+.product .info p {
     color: #777;
     margin-bottom: 21px;
 }
@@ -124,17 +124,17 @@ main {
     color: #ff0000 !important;
 }
 
-.info .cat * {
+.product .info .cat * {
     font-size: 12.8px;
     color: #777;
 
 }
 
-.info .cat a:hover {
+.product .info .cat a:hover {
     color: #1e73be;
 }
 
-.info .cat span {
+.product .info .cat span {
     display: block;
     padding: 5px 0;
     border-top: 1px dotted #ddd;
