--- a/asset/stylesheet/home.css
+++ b/asset/stylesheet/home.css
@@ -165,3 +165,10 @@
     margin-top: 8px;
     cursor: pointer;
 }
+
+
+.countdown-container {
+    color: crimson;
+    margin-top: 15px;
+    font-weight: bold;
+}
