--- a/asset/stylesheet/overlay.css
+++ b/asset/stylesheet/overlay.css
@@ -49,10 +49,12 @@
     cursor: pointer;
 
 }
+
 .overlay .bottom {
     margin-top: 25px;
     width: 100%;
 }
+
 .overlay .field {
     margin: 12px 0;
     width: 100%;
@@ -67,11 +69,18 @@
 .overlay .bottom {
     text-align: right;
 }
+
 .overlay .bottom p,
 .overlay .bottom a {
     color: rgb(116, 116, 116);
     font-size: 14px;
 }
+
+.overlay .bottom a {
+    color: lightcoral;
+    text-decoration: underline;
+}
+
 .overlay .back {
     position: absolute;
     background-color: white;
@@ -80,12 +89,14 @@
     left: 5%;
     cursor: pointer;
 }
+
 .overlay .back a {
     padding: 0 24px;
     line-height: 42px;
 }
-.overlay .back i,.overlay .back a {
+
+.overlay .back i,
+.overlay .back a {
     color: black;
     text-decoration: none;
 }
-
